# qldd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: d3_demo.yaml  d3_ideate.yaml  d3_mig.yaml  d5_a100.yaml  d7_a100.yaml  d7_cap.yaml  d7_cap_mig.yaml  d7_conv.yaml  d7_local.yaml  d7_online.yaml  stage1_global.yaml
notebooks/: qldd_colab.ipynb
scripts/: aggregate_ablation.py  constrained_diag.py  error_breakdown.py  eval_decoder_D.py  infer_diag.py  inference_rescue.py  ler_vs_p.py  make_ablation.py  mwpm_threshold_check.py  plot_run.py  sanity_check.py  stage1_verdict.py  sweep_decoder_D.py  sweep_logical.py  threshold_dual.py  threshold_gate.py  train_anchored.py  train_logical.py
slurm/: constr_diag.slurm  infer_diag.slurm  ler_sweep.slurm  mwpm_threshold.slurm  stage1.slurm  sweep_d.slurm  sweep_logical.slurm  threshold_dual.slurm  train_a100.slurm  train_anchored.slurm  train_d3_mig.slurm  train_d5_chain.slurm  train_logical_a100.slurm  train_mig.slurm  train_online.slurm
src/qldd/: analysis.py  anchored.py  baseline.py  data.py  diffusion.py  legacy_model.py  logical.py  model.py  train.py
tests/: test_analysis.py  test_contract.py
