[project]
name = "qldd"
version = "0.1.0"
description = "Local diffusion decoder for the surface code"
requires-python = ">=3.10"
dependencies = ["stim>=1.13", "pymatching>=2.2", "numpy>=1.24", "torch>=2.1", "pyyaml>=6.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
